cmake_minimum_required(VERSION 3.29)
project(leetcode_s)

set(CMAKE_CXX_STANDARD 14)

add_executable(leetcode_s
    leetcode/editor/cn/559_maximum-depth-of-n-ary-tree.cpp)

add_executable(222_count-complete-tree-nodes leetcode/editor/cn/222_count-complete-tree-nodes.cpp)
add_executable(110_balanced-binary-tree leetcode/editor/cn/110_balanced-binary-tree.cpp)
add_executable(257_binary-tree-paths leetcode/editor/cn/257_binary-tree-paths.cpp)
add_executable(404_sum-of-left-leaves leetcode/editor/cn/404_sum-of-left-leaves.cpp)
add_executable(513_find-bottom-left-tree-value leetcode/editor/cn/513_find-bottom-left-tree-value.cpp)
add_executable(112_path-sum leetcode/editor/cn/112_path-sum.cpp)
add_executable(113_path-sum-ii leetcode/editor/cn/113_path-sum-ii.cpp)
add_executable(106_construct-binary-tree-from-inorder-and-postorder-traversal leetcode/editor/cn/106_construct-binary-tree-from-inorder-and-postorder-traversal.cpp)
add_executable(105_construct-binary-tree-from-preorder-and-inorder-traversal leetcode/editor/cn/105_construct-binary-tree-from-preorder-and-inorder-traversal.cpp)
add_executable(654_maximum-binary-tree leetcode/editor/cn/654_maximum-binary-tree.cpp)
add_executable(617_merge-two-binary-trees leetcode/editor/cn/617_merge-two-binary-trees.cpp)
add_executable(700_search-in-a-binary-search-tree leetcode/editor/cn/700_search-in-a-binary-search-tree.cpp)
add_executable(530_minimum-absolute-difference-in-bst leetcode/editor/cn/530_minimum-absolute-difference-in-bst.cpp)
add_executable(501_find-mode-in-binary-search-tree leetcode/editor/cn/501_find-mode-in-binary-search-tree.cpp)
add_executable(98_validate-binary-search-tree leetcode/editor/cn/98_validate-binary-search-tree.cpp)
add_executable(236_lowest-common-ancestor-of-a-binary-tree leetcode/editor/cn/236_lowest-common-ancestor-of-a-binary-tree.cpp)
add_executable(235_lowest-common-ancestor-of-a-binary-search-tree leetcode/editor/cn/235_lowest-common-ancestor-of-a-binary-search-tree.cpp)
add_executable(701_insert-into-a-binary-search-tree leetcode/editor/cn/701_insert-into-a-binary-search-tree.cpp)
add_executable(450_delete-node-in-a-bst leetcode/editor/cn/450_delete-node-in-a-bst.cpp)
add_executable(669_trim-a-binary-search-tree leetcode/editor/cn/669_trim-a-binary-search-tree.cpp)